# TelegramMusicBot

./: .gitignore  Procfile  decorators.py  logger.py  models.py  music_bot.py  procfile  pyproject.toml  scrap.py  settings.py.secret  utils.py
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
music_bot/: bot.py  logger.py  settings.py
music_bot/scrap/: decorators.py  models.py  scrap.py  scraper.py  test_speed.py
music_bot/utils/: aioutils.py  utils.py
