[tool.poetry]
name = "musicfa-bot"
version = "0.1.0"
description = ""
authors = ["Shervin <Shervinsaeedi78@gmail.com>"]
readme = "README.md"
packages = [{include = "musifa_bot"}]

[tool.poetry.dependencies]
python = "3.8.10"
beautifulsoup4 = "^4.11.1"
python-telegram-bot = {version="^20.0a4", allow-prereleases = true}
requests = "^2.28.1"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
